[package]
name = "ble-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.11", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
uuid = "1.1.2"
futures = "0.3"
lazy_static = "1.4.0"
lebe = "0.5.2"
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"
actix-web = "4"
env_logger = "0.10"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
regex = "1.9.4"
